# wdns

./: .gitignore  Cargo.toml  README.md  TESTING.md  config  config-socks5-example.json
macos-listener/: Cargo.toml  HOSTNAME_TESTING_README.md  IMPLEMENTATION_SUMMARY.md  LOW_LEVEL_APIS.md  README.md  TRAFFIC_INTERCEPTOR_README.md  UI_BUTTONS_GUIDE.md  build.sh  example-proxy-config.json  run.sh  simple_http_test.sh  simple_test.sh  test-network.sh  test_hostname_resolution.sh  test_network  test_pattern_matching  test_proxy.sh  test_real_traffic.sh  test_traffic_interceptor.sh  test_ui_buttons.sh
macos-listener/src/: kqueue_monitor.rs  main.rs  network_monitor.rs  real_proxy.rs  socks5_client.rs  traffic_interceptor.rs  traffic_interceptor_helpers.rs
scripts/: README-macos-proxy.md  README-proxy-scripts.md  demo-macos-proxy.sh  diagnose-socks5.sh  install-service.ps1  macos-proxy-setup.sh  macos-quick-proxy.sh  macos-tunnel.sh  proxy  proxy-manager.sh  quick-start.sh  setup-proxy-env.sh  start-with-proxy.sh  test-proxy.ps1  test-proxy.sh  test-service.ps1  test-socks5-raw.sh  test-socks5.sh  uninstall-service.ps1  update-hosts.sh
src/: api.rs  config.rs  dns.rs  lib.rs  main.rs  proxy.rs  service.rs  socks5.rs  ssh_tunnel.rs
tests/: api_tests.rs  integration_tests.rs  load_tests.rs  proxy_tests.rs
