[package]
name = "wdns-service"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Windows DNS Resolution Service with HTTP API"
license = "MIT"

[[bin]]
name = "wdns-service"
path = "src/main.rs"

[lib]
name = "wdns_service"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
# windows-service = "0.6"  # Commented out for now - requires Windows to compile
winapi = { version = "0.3", features = ["winuser", "processthreadsapi", "handleapi", "synchapi", "errhandlingapi"] }
trust-dns-resolver = "0.23"
futures-util = "0.3"
futures = "0.3"
hyper = { version = "0.14", features = ["full"] }
bytes = "1.0"
url = "2.0"
# SSH and SOCKS5 dependencies
russh = "0.44"
russh-keys = "0.44"
tokio-util = { version = "0.7", features = ["codec"] }
async-trait = "0.1"

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"
